--- a/themes/planet_vala/index.html.tmpl
+++ b/themes/planet_vala/index.html.tmpl
@@ -44,6 +44,17 @@
 
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Find Projects <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="https://wiki.gnome.org/Projects/Vala/Documentation#Projects_Developed_in_Vala">Vala Wiki</a></li>
+								<li class="divider"></li>
+								<li><a href="https://github.com/search?l=Vala&q=stars%3A%3E%3D0&s=stars&type=Repositories">GitHub</a></li>
+								<li><a href="https://code.google.com/hosting/search?q=label%3avala">Google Code</a></li>
+								<li class="divider"></li>
+								<li><a href="https://www.ohloh.net/tags/vala">Ohloh</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Blogs <b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href=""></a></li>
@@ -74,7 +85,7 @@
 							</div>
 							<div class="panel-footer">
 								<a href="<TMPL_VAR channel_link ESCAPE="HTML">" title="<TMPL_VAR channel_title_plain ESCAPE="HTML">"><TMPL_VAR channel_name></a>
-								at <TMPL_VAR date></a>
+								on <TMPL_VAR date> UTC</a>
 							</div>
 						</article>
 					</TMPL_LOOP>
@@ -83,7 +94,7 @@
 		</div>
 
 		<footer class="container text-center">
-			Last updated <TMPL_VAR date>.<br>
+			Last updated <TMPL_VAR date> UTC.<br>
 			Please report issues or suggestions to the <a href="https://github.com/nemequ/planet-vala">nemequ/planet-vala</a> repository on GitHub.
 		</footer>
 	</body>
