Provide more explicit directions in the footer.

--- a/themes/planet_vala/index.html.tmpl
+++ b/themes/planet_vala/index.html.tmpl
@@ -110,7 +110,7 @@
 
 		<footer class="container text-center">
 			Last updated <TMPL_VAR date> UTC.<br>
-			Please report issues or suggestions to the <a href="https://github.com/nemequ/planet-vala">nemequ/planet-vala</a> repository on GitHub.<br>
+			Please report issues, suggestions, and requests to add and remove blogs to the <a href="https://github.com/nemequ/planet-vala">nemequ/planet-vala</a> repository's issue tracker on GitHub.<br>
 			<a href="atom.xml">Atom</a> |
 			<a href="rss20.xml"><abbr title="Rich Site Syndication">RSS</abbr> 2.0</a> |
 			<a href="rss10.xml"><abbr title="Rich Site Syndication">RSS</abbr> 1.0</a> |
