Add freecode in the find projects dropdown

--- a/themes/planet_vala/index.html.tmpl
+++ b/themes/planet_vala/index.html.tmpl
@@ -63,6 +63,7 @@
 								<li><a href="https://code.google.com/hosting/search?q=label%3avala">Google Code</a></li>
 								<li class="divider"></li>
 								<li><a href="https://www.ohloh.net/tags/vala">Ohloh</a></li>
+								<li><a href="http://freecode.com/tags/vala">Freecode</a></li>
 							</ul>
 						</li>
 					</ul>
