--- a/themes/planet_vala/index.html.tmpl
+++ b/themes/planet_vala/index.html.tmpl
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 		<style type="text/css">
 			body {
-				background: url(html-bg.png) repeat-x;
+				background: url(html-bg.png) repeat-x white;
 				padding-top: 1em;
 			}
 
