Some minor HTML fixes

--- a/themes/planet_vala/index.html.tmpl
+++ b/themes/planet_vala/index.html.tmpl
@@ -59,7 +59,7 @@
 							<ul class="dropdown-menu">
 								<li><a href="https://wiki.gnome.org/Projects/Vala/Documentation#Projects_Developed_in_Vala">Vala Wiki</a></li>
 								<li class="divider"></li>
-								<li><a href="https://github.com/search?l=Vala&q=stars%3A%3E%3D0&s=stars&type=Repositories">GitHub</a></li>
+								<li><a href="https://github.com/search?l=Vala&amp;q=stars%3A%3E%3D0&amp;s=stars&amp;type=Repositories">GitHub</a></li>
 								<li><a href="https://code.google.com/hosting/search?q=label%3avala">Google Code</a></li>
 								<li class="divider"></li>
 								<li><a href="https://www.ohloh.net/tags/vala">Ohloh</a></li>
@@ -101,7 +101,7 @@
 							</div>
 							<div class="panel-footer">
 								<a href="<TMPL_VAR channel_link ESCAPE="HTML">" title="<TMPL_VAR channel_title_plain ESCAPE="HTML">"><TMPL_VAR channel_name></a>
-								on <TMPL_VAR date> UTC</a>
+								on <TMPL_VAR date> UTC
 							</div>
 						</article>
 					</TMPL_LOOP>
